--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       - "3306:3306"
     environment:
       MYSQL_DATABASE: portfolio
-      MYSLQ_ROOT_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: secret
