--- a/apache-config.conf
+++ b/apache-config.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 
-    DocumentRoot /var/www/html/public
+    DocumentRoot /var/www/html/public_html
 
-    <Directory /var/www/html/public>
+    <Directory /var/www/html/public_html>
         AllowOverride All
         Require all granted
     </Directory>
